--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 		<script src="js/mail-generator.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
 		<title>Mr. Destructoid's Mega Inbox</title>
     <script>
